--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "set-focus",
-  "version": "0.0.1",
-  "description": "Browser script for autosetting focus in some elements on pages",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "auto",
-    "set",
-    "focus"
-  ],
-  "author": "uid11",
-  "license": "MIT"
+    "name": "auto-set-focus",
+    "version": "0.0.1",
+    "description": "Browser script for auto-setting focus on some element on page",
+    "main": "index.js",
+    "scripts": {
+        "test": "node index.test.js"
+    },
+    "keywords": [
+        "auto",
+        "set",
+        "focus"
+    ],
+    "author": "uid11",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uid11/auto-set-focus.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uid11/auto-set-focus/issues"
+    },
+    "homepage": "https://github.com/uid11/auto-set-focus#readme",
+    "type": "module"
 }
